<resources>
    <string name="app_name">Examen3</string>
    <string name="txtCong">Configuracion</string>
    <string name="txt_inicar_s">Íngresa tus datos para Iniciar Secion</string>
    <string name="inserta_nombre">Ingresa nombre de usuario</string>
    <string name="txt_password">**********</string>
    <string name="txt_btn_beggin">Iniciar Secion</string>

    <string name="home_cong">Configurar +</string>

    <string name="login_error">Datos deben ser mayor a 5</string>
    <string name="txt_numbr">+51 123456789</string>
    <string name="config_title_btn">Subir foto</string>

    <string name="primero_txt">modo oscuro</string>
</resources>