<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StarConfig"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.utils.widget.ImageFilterView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:padding="14dp"
            android:src="@drawable/ic_baseline_subdirectory_arrow_left_24" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtCong"
            android:layout_centerInParent="true"
            android:textColor="@color/amarillo"
            android:textStyle="bold"
            android:textSize="18sp"/>
    </RelativeLayout>
    <ScrollView
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/profile_image"
                android:layout_width="300dp"
                android:layout_height="190dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:scaleType="centerCrop"
                android:src="@drawable/banner_cong"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="USER NAME"
                android:textStyle="bold"
                android:textSize="22sp"
                android:textColor="@color/black"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/txt_numbr"
                android:gravity="center"
                android:textSize="15sp"
                android:textColor="@color/black"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/edit_image"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:paddingStart="25dp"
                android:layout_gravity="center"
                android:background="@drawable/back_button"
                android:paddingEnd="20dp"
                android:textAllCaps="false"
                android:text="@string/config_title_btn"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="40dp"
                android:orientation="vertical"
                android:background="@drawable/back_button"
                android:padding="15dp">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp">
                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="@drawable/back_button_sg"
                        android:id="@+id/nightModeIcon"
                        android:src="@drawable/ic_baseline_nights_stay_24"
                        android:padding="8dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/primero_txt"
                        android:layout_toEndOf="@+id/nightModeIcon"
                        android:layout_marginStart="16dp"
                        android:textStyle="bold"/>
                    <Switch
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:switchMinWidth="50dp"
                        android:theme="@style/SwitchMode"/>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp">
                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="@drawable/back_button_sg"
                        android:id="@+id/NotificationIcon"
                        android:src="@drawable/ic_baseline_notifications_none_24"
                        android:padding="8dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="Notification"
                        android:layout_toEndOf="@+id/NotificationIcon"
                        android:layout_marginStart="16dp"
                        android:textStyle="bold"/>
                    <Switch
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:switchMinWidth="50dp"
                        android:theme="@style/SwitchMode"/>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp">

                    <ImageView
                        android:id="@+id/PrivateAccountIcon"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="@drawable/back_button_sg"
                        android:padding="8dp"
                        android:src="@drawable/ic_baseline_supervised_user_circle_24" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="Private account"
                        android:layout_toEndOf="@+id/PrivateAccountIcon"
                        android:layout_marginStart="16dp"
                        android:textStyle="bold"/>
                    <Switch
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:switchMinWidth="50dp"
                        android:theme="@style/SwitchMode"/>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp">
                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="@drawable/back_button_sg"
                        android:id="@+id/SecurityIcon"
                        android:src="@drawable/ic_baseline_lock_open_24"
                        android:padding="8dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="Security"
                        android:layout_toEndOf="@+id/SecurityIcon"
                        android:layout_marginStart="16dp"
                        android:textStyle="bold"/>
                    <Switch
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:switchMinWidth="50dp"
                        android:theme="@style/SwitchMode"/>
                </RelativeLayout>

            </LinearLayout>
        </LinearLayout>


    </ScrollView>

</FrameLayout>